name:                pdc-cli
version:             0.1.0
synopsis:            One line summary
description:
        Short paragraph here
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
homepage:            https://github.com/juhp/pdc-cli
bug-reports:         https://github.com/juhp/pdc-cli/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/pdc-cli.git

executable pdc-cli
  main-is:             Main.hs
  other-modules:       Paths_pdc_cli
  build-depends:       aeson,
                       aeson-pretty,
                       base < 5,
                       bytestring,
                       pdc,
                       simple-cmd-args >= 0.1.6,
                       split,
                       text,
                       unordered-containers,
                       yaml
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
